# hope

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Justfile  Makefile  a.patch  compile_commands.json  main.cpp  work-async.md  work.md
assets/scenes/: triangle.glb
assets/shaders/: a.spv  build.sh  debug.frag  debug.frag.spv  debug.spv  debug.vert.spv  grid.frag  grid.frag.spv  grid.spv  grid.vert  grid.vert.spv  tri.frag  tri.frag.spv  tri.spv  tri.vert  tri.vert.spv
cmake/: shader.cmake
core/: core.h  core.mk  debug.cpp  debug.h  fwd.h  log.cpp  log.h  math.cpp  math.h  memory.cpp  memory.h  platform.h  string.cpp  string.h  types.h
scripts/: format-all.sh
src/: app.cpp  app_loader-shared.cpp  app_loader.cpp  app_loader.h  main.cpp  prelude.h  subsystems.cpp  subsystems.h
src/app/: app.cpp  app.h  basic_renderer.cpp  basic_renderer.h  camera.h  debug_renderer.h  grid_renderer.h  imgui_renderer.cpp  imgui_renderer.h  mesh.cpp  mesh.h  profiler.cpp  profiler.h  renderer.cpp  renderer.h  testfree.cpp  triangle_renderer.cpp  triangle_renderer.h  vma.cpp  vulkan_helper.cpp  vulkan_helper.h
src/containers/: containers.mk  sync.cpp  vec.h
src/core/: base.h  core.h  core.mk  debug.cpp  debug.h  fwd.h  iterator.h  log.cpp  log.h  math.cpp  math.h  memory.cpp  memory.h  os.h  platform.cpp  platform.h  string.cpp  string.h  sync.cpp  sync.h  type_info.cpp  type_info.h  types.h
src/core/containers/: deque.h  handle_map.h  indexmap.h  list.h  pool.h  stable_vec.h  sync.cpp  sync.h  tuple.h  vec.h
src/core/core/: base.h  debug.cpp  debug.h  future.h  fwd.h  log.cpp  log.h  math.cpp  math.h  memory.cpp  memory.h  platform.cpp  platform.h  sched.cpp  sched.h  string.cpp  string.h  type_info.cpp  type_info.h  types.h
src/core/debug/: config.cpp  config.h  time.cpp  time.h
src/core/fs/: fs.cpp  fs.h
src/core/math/: math.cpp  math.h
src/core/os/: fs.h  memory.cpp  memory.h  time.cpp  time.h
src/core/os/linux/: fs.cpp  memory.cpp  time.cpp
src/core/os/windows/: fs.cpp  memory.cpp  time.cpp
src/core/utils/: config.cpp  config.h  time.cpp  time.h
src/core/vulkan/: frame.cpp  frame.h  image.cpp  image.h  init.cpp  init.h  pipeline.h  subsystem.cpp  subsystem.h  timings.cpp  timings.h  vma.cpp  vulkan.cpp  vulkan.h
src/engine/graphics/: subsystem.cpp  subsystem.h  vulkan.h
src/engine/graphics/vulkan/: descriptor.h  frame.cpp  frame.h  image.cpp  image.h  init.cpp  init.h  pipeline.h  rendering.h  sync.h  timings.cpp  vma.cpp  vulkan.cpp  vulkan.h
src/engine/graphics/vulkan/ext/: vk_storage.h
src/engine/utils/: config.cpp  config.h  time.cpp
src/loader/: app_loader-shared.cpp  app_loader-static.cpp  app_loader.h  main.cpp  prelude.h  subsystems.cpp  subsystems.h
src/os/: memory.cpp  memory.h  os.h  os.mk  time.cpp  time.h
src/os/linux/: linux.mk  memory.cpp  time.cpp
src/shaders/: debug.vert  tri.frag  tri.vert
src/tests/: base.cpp  indexmap.cpp  math.cpp  sched.cpp  stable_vec.cpp  tests.cpp  tests.h  tuple.cpp
src/vulkan/: frame.cpp  frame.h  init.cpp  init.h  vulkan.cpp  vulkan.h  vulkan.mk
